<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ECommerceApp</string>
    <string name="welcome_to">Welcome to</string>
    <string name="data_store">Data Store!</string>
    <string name="daily_needs">The best e-commerce app\nfor your daily needs</string>
    <string name="continue_">Continue</string>
    <string name="high_quality">High quality products\njust for you!</string>
    <string name="next">Next</string>
    <string name="choose_deliver_method">Choose any suitable\ndeliver method!</string>
    <string name="convenience">You can pay at your\nconvenience!</string>
    <string name="get_started">Get started</string>
    <string name="lets_you_in">Lets you in</string>
    <string name="you_can_sign_in">You can sign in with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="or">or</string>
    <string name="sign_with_password">Sign in with password</string>
    <string name="do_you_have_account">Don’t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create your account</string>
    <string name="verification_code">Please check your email,Verification code send to your email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="user_name">Username</string>
    <string name="or_with_continue">or continue with</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="great">Great!</string>
    <string name="authorization_code_has_sent">Authorization code has been sent\nto</string>
    <string name="verify">Verify</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="resend_code">Resend</string>
    <string name="verification_code_error_messase">Verification code is not correct</string>
    <string name="sign_in_to_account">Sing in to account</string>
    <string name="change_the_password">Change password</string>
    <string name="recovery">Recovery</string>
    <string name="get_sign_in">Get help signin in</string>
    <string name="enter_email_or_password_des">Enter the email address or username\nassociated with your account</string>
    <string name="user_name_oremail">Username or email</string>
    <string name="enter_recovery_code">Enter recovery code</string>
    <string name="recovery_code_has_been_sent_to">Recovery code has been sent\nto</string>
    <string name="create_new_password">Create a new password</string>
    <string name="duplicate_new_password">Enter new password</string>
    <string name="enter_new_password">Enter old password</string>
    <string name="change">Change</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="congrats">Congratulations!</string>
    <string name="change_password_desc">Your password recovered. Account is ready to use. You will be redirected to the Home page in a few seconds… </string>
    <string name="menu_home">Home</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_card">Cart</string>
    <string name="menu_profile">Profile</string>
    <string name="search_products">Search for everything</string>
    <string name="shop_categories">Shop categories</string>
    <string name="products">Products</string>
    <string name="see_all">See all</string>
    <string name="please_write_correct_username">Please,write a correct username or email</string>
    <string name="fill_your_profile">Fill your profile</string>
    <string name="full_name">Full name</string>
    <string name="nickname">Nickname</string>
    <string name="date">Date</string>
    <string name="telephone">Phone number</string>
    <string name="gender">Gender</string>
    <string name="skip">Skip</string>
    <string name="create_pin">Create new PIN</string>
    <string name="add_new_pin">Add a PIN number to make\nyour account more secure</string>
    <string name="please_put_your_finger">Please put your finger\n on the fingerprint scanner\nto get stardet</string>
    <string name="confirm">Confirm</string>
    <string name="add_new_finger_print">Add a fingerprint to make\nyour account more secure</string>
    <string name="set_your_finger_print">Set your fingerprint</string>
    <string name="succesful_set_pin_desc">Your account is hard secured.\nYou will be redirected to the Home page in a few seconds... </string>
    <string name="fingerprint_authentication_failed">Fingerprint authentication failed</string>
    <string name="fingerprint_authentication_not_supported">Fingerprint authentication not supported</string>
    <string name="buy_now">Buy now</string>
    <string name="add_to_card">Add to card</string>
    <string name="checkout">Checkout</string>
    <string name="total_price">Total price</string>
    <string name="user_already_exists">User already exists,please try another username or email</string>
    <string name="password_is_incorrect">password is incorrect</string>
    <string name="reviews">Reviews</string>
    <string name="complete_order">Complete order</string>
    <string name="questions">Questions</string>
    <string name="specifications">Specifications</string>
    <string name="similar_goods">Similar goods</string>
    <string name="succesfully_added">Succesfully Added</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="adress">Adress</string>
    <string name="payment">Payment</string>
    <string name="notification">Notification</string>
    <string name="security">Security</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="help_center">Help Center</string>
    <string name="log_out">Log out</string>
    <string name="add_new_product">Add new product</string>
    <string name="my_products">My products</string>
    <string name="ongoing">Ongoing</string>
    <string name="canceled">Canceled</string>
    <string name="orders">Orders</string>
    <string name="orders_ongoing_desc">You don’t have an ongoing orders at this time</string>
    <string name="orders_completed_desc">You don’t have completed orders yet</string>
    <string name="orders_canceled_desc">There are no cancelled orders</string>
    <string name="my_wishList">Wish List</string>
    <string name="my_wish_List">My wish list</string>
    <string name="in_delivery">in delivery</string>
    <string name="buy_again">Buy again</string>
    <string name="leave_review">Leave review</string>
    <string name="order_status_question">How is your order?</string>
    <string name="type_review">Type review</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="add_more_products">Add more products</string>
    <string name="completed">Completed</string>
    <string name="my_wish_list">My wish list</string>
    <string name="complete">complete</string>

    <string-array name="language_spinner_items">
        <item>English</item>
        <item>German</item>
        <item>Turkish</item>
        <item>Ukraine</item>
        <item>Azerbaijani</item>
    </string-array>

</resources>