<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_menu_home"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/orders"
        android:icon="@drawable/ic_menu_orders"
        app:showAsAction="always"
        android:title="@string/menu_orders" />
    <item
        android:id="@+id/card"
        android:icon="@drawable/ic_menu_card"
        app:showAsAction="always"
        android:title="@string/menu_card" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_menu_profile"
        app:showAsAction="always"
        android:title="@string/menu_profile" />

</menu>