<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundScreen"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:backgroundTint="@android:color/transparent"
            app:srcCompat="@drawable/ic_back"
            app:tint="?attr/textColor" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toRightOf="@+id/back"
            android:fontFamily="@font/nunito_font_400"
            android:text="@string/recovery"
            android:textColor="?attr/color_secondary"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_password"
        android:textColor="?attr/textColor"
        android:textSize="32sp"
        android:gravity="center"
        android:fontFamily="@font/barlow_bold_700"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout1"
        app:layout_constraintVertical_bias="0.1" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />





    <Button
        android:id="@+id/change"
        style="@style/CustomButtonStyle"
        android:text="@string/change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.17" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="password_toggle"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintVertical_bias="0.25"
        app:passwordToggleTintMode="multiply"
        app:endIconTint="@drawable/toggle_show"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        >

        <EditText
            android:id="@+id/old_password"
            style="@style/MyEditTextStyle"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:drawablePadding="5dp"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="password_toggle"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintVertical_bias="0.2"
        app:passwordToggleTintMode="multiply"
        app:endIconTint="@drawable/toggle_show"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout"
        >

        <EditText
            style="@style/MyEditTextStyle"
            android:id="@+id/new_password"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/duplicate_new_password"
            android:inputType="textPassword"
            android:drawablePadding="5dp" />

    </com.google.android.material.textfield.TextInputLayout>





</androidx.constraintlayout.widget.ConstraintLayout>